tests/failing/powscl.tail
let v4:[int]0 = prSclI(powerScl(fn v2:[int]0 => let v3:[int]0 = v2 in
                    addi(v3,b2iV(tt)),3,100)) in
i2d(b2iV(ff))
